# locveil-commons

./: .contract-guard.toml  .gitignore  .repin.toml  .scope-guard.toml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
board/: BOARD.md  BOARD_DONE.md  JOURNAL.md
contracts/: PIN.json  README.md  STAMP.json  catalog.golden.json  crossover_fixtures.json  openapi.json
docs/: manifest.json
eval/: ARCHITECTURE.md  README.md  pyproject.toml
eval/eval_commons/: __init__.py  failures.py  fixtures_to_tests.py  mock_bridge.py
eval/eval_commons/assertions/: device_command_assert.py
eval/eval_commons/audio/: __init__.py  conform.py
eval/eval_commons/providers/: cli_provider.py  device_command_provider.py  mqtt_provider.py  sim_user_provider.py  ui_provider.py  ws_audio_provider.py
eval/eval_commons/record/: __init__.py  capture.py  session.py  worklist.py
eval/examples/: .env.example  cli.promptfooconfig.yaml
eval/examples/ru-ux-calibration/: README.md  gold_labels.yaml  promptfooconfig.yaml  score.py
eval/shared/: deepseek-judge.yaml  promptfooconfig.base.yaml
eval/shared/rubrics/en/: graceful_failure_en.txt  polite_helpful_en.txt
eval/tests/: test_conform.py  test_contracts_pin.py  test_crossover_fixtures.py  test_device_command_eval.py  test_docs_manifest.py  test_failures.py
eval_commons/: __init__.py  failures.py  fixtures_to_tests.py  mock_bridge.py
examples/: .env.example
hooks/: pre-commit
process/: README.md  claude-md.md  contracts.md  council.md  ledger-discipline.md  problem-reports.md  python-layout.md  sprints.md  user-docs.md
shared/: deepseek-judge.yaml
site/: README.md
tests/: test_contracts_pin.py  test_crossover_fixtures.py  test_device_command_eval.py  test_worklist.py
(+74 files in other folders)
